// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ExpenseListItem should render ExpenseListItem when all props valid 1`] = `
<div>
  <Link
    replace={false}
    to="/edit/1"
  >
    <h3>
      Gum
    </h3>
  </Link>
  <p>
    Amount: $
    1.95
  </p>
  <p>
    Notes: 
    note
  </p>
  <p>
    Created at: 
    Wednesday, December 31st, 1969
  </p>
</div>
`;

exports[`ExpenseListItem should render ExpenseListItem without amount if not defined 1`] = `
<div>
  <Link
    replace={false}
    to="/edit/1"
  >
    <h3>
      Gum
    </h3>
  </Link>
  <p>
    Notes: 
    note
  </p>
  <p>
    Created at: 
    Wednesday, December 31st, 1969
  </p>
</div>
`;

exports[`ExpenseListItem should render ExpenseListItem without link if description not defined 1`] = `
<div>
  <p>
    Amount: $
    1.95
  </p>
  <p>
    Notes: 
    note
  </p>
  <p>
    Created at: 
    Wednesday, December 31st, 1969
  </p>
</div>
`;

exports[`ExpenseListItem should render ExpenseListItem without link if id not defined 1`] = `
<div>
  <p>
    Amount: $
    1.95
  </p>
  <p>
    Notes: 
    note
  </p>
  <p>
    Created at: 
    Wednesday, December 31st, 1969
  </p>
</div>
`;

exports[`ExpenseListItem should render ExpenseListItem without note if not defined 1`] = `
<div>
  <Link
    replace={false}
    to="/edit/1"
  >
    <h3>
      Gum
    </h3>
  </Link>
  <p>
    Amount: $
    1.95
  </p>
  <p>
    Created at: 
    Wednesday, December 31st, 1969
  </p>
</div>
`;

exports[`ExpenseListItem should render expenselistitem without createdAt if not defined 1`] = `
<div>
  <Link
    replace={false}
    to="/edit/1"
  >
    <h3>
      Gum
    </h3>
  </Link>
  <p>
    Amount: $
    1.95
  </p>
  <p>
    Notes: 
    note
  </p>
</div>
`;
